Messaggi di prova

--- a/index.html
+++ b/index.html
@@ -62,7 +62,24 @@
                 </div>
             </div>
             <div id="chat-content">
-
+                <div class="row-me">
+                    <div class="me-message general-text-area-style">
+                        Hai portato a spasso il cane?
+                        <div class="message-time">orario</div>
+                    </div>
+                </div>
+                <div class="row-me">
+                    <div class="me-message general-text-area-style">
+                        Ricordati di dargli da mangiare
+                        <div class="message-time">orario</div>
+                    </div>
+                </div>
+                <div class="row-other">
+                    <div class="other-message general-text-area-style">
+                        Tutto fatto!
+                        <div class="message-time">orario</div>
+                    </div>
+                </div>
             </div>
             <div id="send">
                 <i class="far fa-smile"></i>
