--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
                 </div>
             </div>
             <div id="chats">
-
+                <div v-for="contact in contacts" class="person-style">
+                    <div class="circle-style">
+                        <img :src="'img/avatar' + contact.avatar + '.jpg'">
+                    </div>
+                    <div class="person-info">
+                        <div class="person-name">{{contact.name}}</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="right-content">
