--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div id="chats">
-                <div v-for="(contact,index) in contacts" class="person-style"  :class="(index == 0)? 'active' : ''">
+                <div v-for="contact in contacts" class="person-style"  :class="contact.active? 'active' : ''" @click="openChat(contact)">
                     <div class="circle-style">
                         <img :src="'img/avatar' + contact.avatar + '.jpg'">
                     </div>
@@ -57,12 +57,12 @@
         </div>
         <div id="right-content">
             <div class="header-style">
-                <div class="person-style" id="person-chatting">
+                <div class="person-style person-chatting" v-for="contact in contacts" v-if="contact.active">
                     <div class="circle-style">
-                        <img :src="'img/avatar' + contacts[0].avatar + '.jpg'">
+                        <img v-if="" :src="'img/avatar' + contact.avatar + '.jpg'">
                     </div>
                     <div class="person-info">
-                        <div class="person-name">{{contacts[0].name}}</div>
+                        <div class="person-name">{{contact.name}}</div>
                         <div class="person-access">Ultimo accesso oggi alle</div>
                     </div>
                 </div>
@@ -72,8 +72,8 @@
                     <i class="fas fa-ellipsis-v"></i>
                 </div>
             </div>
-            <div id="chat-content">
-                <div class="row" v-for="message in contacts[0].messages" :class="(message.status == 'sent')? 'row-me' : 'row-other'">
+            <div class="chat-content" v-for="contact in contacts" v-if="contact.active">
+                <div class="row" v-for="message in contact.messages" :class="(message.status == 'sent')? 'row-me' : 'row-other'">
                     <div class="general-text-area-style" :class="(message.status == 'sent')? 'me-message' : 'other-message'">
                         {{message.text}}
                         <div class="message-time">
