Correzione in classe milestone 2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div id="chats">
-                <div v-for="contact in contacts" v-if="contact.visible" class="person-style"  :class="contact.active? 'active' : ''" @click="openChat(contact);closeWindow()">
+                <div v-for="(contact,index) in contacts" v-if="contact.visible" class="person-style" :class="(index == activeContact)? 'active' : ''" @click="openChat(index);closeWindow()">
                     <div class="circle-style">
                         <img :src="'img/avatar' + contact.avatar + '.jpg'">
                     </div>
@@ -58,12 +58,12 @@
         </div>
         <div id="right-content">
             <div class="header-style">
-                <div class="person-style person-chatting" v-for="contact in contacts" v-if="contact.active">
+                <div class="person-style person-chatting" v-for="contacts[activeContact]">
                     <div class="circle-style">
-                        <img v-if="" :src="'img/avatar' + contact.avatar + '.jpg'">
+                        <img :src="'img/avatar' + contacts[activeContact].avatar + '.jpg'">
                     </div>
                     <div class="person-info">
-                        <div class="person-name">{{contact.name}}</div>
+                        <div class="person-name">{{contacts[activeContact].name}}</div>
                         <div class="person-access">Ultimo accesso oggi alle</div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                     <i class="fas fa-ellipsis-v"></i>
                 </div>
             </div>
-            <div class="chat-content" v-for="contact in contacts" v-if="contact.active">
-                <div class="row" v-for="(message,index) in contact.messages" :class="(message.status == 'sent')? 'row-me' : 'row-other'">
+            <div class="chat-content" v-for="contacts[activeContact]">
+                <div class="row" v-for="(message,index) in contacts[activeContact].messages" :class="(message.status == 'sent')? 'row-me' : 'row-other'">
                     <div class="general-text-area-style" :class="(message.status == 'sent')? 'me-message' : 'other-message'">
                         {{message.text}}
                         <div class="message-time">
@@ -89,9 +89,9 @@
                     </div>
                 </div>
             </div>
-            <div class="send-to" v-for="contact in contacts" v-if="contact.active">
+            <div class="send-to" v-for="contacts[activeContact]">
                 <i class="far fa-smile"></i>
-                <input type="text" class="general-text-area-style" name="write-message" id="write-message" placeholder="Scrivi un messaggio" v-on:keyup.enter="sendMessage(contact);receiveConfirm(contact)">
+                <input type="text" class="general-text-area-style" name="write-message" id="write-message" placeholder="Scrivi un messaggio" v-on:keyup.enter="sendMessage(contacts[activeContact]);receiveConfirm(contacts[activeContact])">
                 <i class="fas fa-microphone"></i>
                 </div>
             </div>
