Milestone 5 mi sembra ok

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     </div>
                     <div class="person-info">
                         <div class="person-name">{{contact.name}}</div>
+                        <div class="person-last-text">{{contact.messages[contact.messages.length - 1].text}}</div>
+                        <div class="person-last-time">{{contact.messages[contact.messages.length - 1].date}}</div>
                     </div>
                 </div>
             </div>
