Tizio sta scrivendo

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="person-info">
                         <div class="person-name">{{contacts[activeContact].name}}</div>
-                        <div class="person-access">Ultimo accesso oggi alle</div>
+                        <div class="person-access">{{lastAccess}}</div>
                     </div>
                 </div>
                 <div class="buttons-container-style">
