modificato il modo di ricevere l'ok e attivato anche il pulsante per inviare

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
             <div class="send-to" v-for="contacts[activeContact]">
                 <i class="far fa-smile"></i>
-                <input type="text" class="general-text-area-style" name="write-message" id="write-message" placeholder="Scrivi un messaggio" v-on:keyup.enter="sendMessage(contacts[activeContact]);receiveConfirm(contacts[activeContact])">
-                <i class="fas fa-microphone"></i>
+                <input type="text" class="general-text-area-style" name="write-message" id="write-message" v-model="newMessage" placeholder="Scrivi un messaggio" v-on:keyup.enter="sendMessage(contacts[activeContact])">
+                <i class="fas fa-microphone" :class="(newMessage == '')? 'fa-microphone' : 'fa-paper-plane'" @click="sendMessage(contacts[activeContact])"></i>
                 </div>
             </div>
         </div>
